--- a/PE-study.html
+++ b/PE-study.html
@@ -347,7 +347,7 @@
                 <h3 class="card-title">Past Results</h3>
               </div>
               <div class="card-body">
-                <p class="text-primary">FE Civil Results Verifiable Link: <a href="https://account.ncees.org/rn/2101493-1372808-f157f54" class="pe-auto">Pass / 31 Mar 2021 / Oregon Board</a></p>
+                <p class="text-secondary">FE Civil Results Verifiable Link: <a href="https://account.ncees.org/rn/2101493-1372808-f157f54" class="pe-auto">Pass / 31 Mar 2021 / Oregon Board</a></p>
                 <p class="text-secondary">PE Civil: Structural Results Verifiable Link: <a href="https://account.ncees.org/rn/2101493-1579567-609ce10" class="pe-auto">Unsuccessful Attempt / 13 Apr 2023 / Oregon Board</a></p> 
               </div>
             </div>
@@ -357,7 +357,7 @@
                 <h3 class="card-title">Favorites</h3>
               </div>
               <div class="card-body">
-                <p class="text-secondary"><a href="https://open.spotify.com/user/jewle30y7mtfcll7eilheq6fl?si=cebbd20d71194b77" class="pe-auto">Spotify</a></p>
+                <p><a href="https://open.spotify.com/user/jewle30y7mtfcll7eilheq6fl?si=cebbd20d71194b77" class="pe-auto">Spotify</a></p>
                 <p class="text-secondary"><a href="https://www.discogs.com/user/structurallyunsound/collection?header=1" class="pe-auto">Discogs</a></p>
                 
                 <p class="text-secondary"><a href="https://stats.fm/paulstephenrudd" class="pe-auto">stats.fm</a></p>
