--- a/PE-study.html
+++ b/PE-study.html
@@ -360,7 +360,7 @@
               <div class="card-body">
                 <p>FE Civil Results Verifiable Link: <a href="https://account.ncees.org/rn/2101493-1372808-f157f54" class="pe-auto">Pass / 31 Mar 2021 / Oregon Board</a></p>
                 <p>PE Civil: Structural Results Verifiable Link: <a href="https://account.ncees.org/rn/2101493-1579567-609ce10" class="pe-auto">Unsuccessful Attempt / 13 Apr 2023 / Oregon Board</a></p> 
-                <p class="text-secondary"><a href="assets/documents/2023_C04_06_Examinee_Diagnostic_1579567_2101493_643db14d49f34.pdf" class="pe-auto">13 Apr 2025 Diagnostic</a></p>
+                <p class="ms-4" class="text-secondary"><a href="assets/documents/2023_C04_06_Examinee_Diagnostic_1579567_2101493_643db14d49f34.pdf" class="pe-auto">13 Apr 2025 Diagnostic</a></p>
               </div>
             </div>
             
