--- a/daily-games.html
+++ b/daily-games.html
@@ -347,7 +347,7 @@
               <!-- Cards navigation -->
               <ul class="nav nav-tabs">
                 <li class="nav-item">
-                  <a href="#tab-top-1" class="nav-link active" data-bs-toggle="tab">Tab 1</a>
+                  <a href="#tab-top-1" class="nav-link active" data-bs-toggle="tab">The 'dles</a>
                 </li>
                 <li class="nav-item">
                   <a href="#tab-top-2" class="nav-link" data-bs-toggle="tab">Tab 2</a>
@@ -363,12 +363,13 @@
               <!-- Content of card #1 -->
               <div id="tab-top-1" class="card tab-pane active show">
                 <div class="card-body">
-                  <div class="card-title">The 'dles</div>
-                  <p class="text-secondary">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
-                    distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
-                  </p>
-                  <p class="text-secondary"><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" class="pe-auto">Human Benchmark Page</a></p>
+                  <div class="card-title">Geography & History</div>
+                  <p class="text-secondary">Worldle<a href="https://worldle.teuteuf.fr/" class="pe-auto">https://worldle.teuteuf.fr/</a></p>
+                  <p class="text-secondary">Travle<a href="https://travle.earth/" class="pe-auto">https://travle.earth/</a></p>
+                  <p class="text-secondary">Histordle | Yeardle<a href="https://histordle.com/yeardle/" class="pe-auto">https://histordle.com/yeardle/</a></p>
+                  <p class="text-secondary">Histordle | Popcultured<a href="https://histordle.com/popcultured/" class="pe-auto">https://histordle.com/popcultured/</a></p>
+                  <p class="text-secondary">Chronophoto<a href="https://www.chronophoto.app/game.html" class="pe-auto">https://www.chronophoto.app/game.html</a></p>
+                  <p class="text-secondary">Timeguessr<a href="https://timeguessr.com/roundonedaily" class="pe-auto">https://timeguessr.com/roundonedaily</a></p>
                 </div>
               </div>
               <!-- Content of card #2 -->
@@ -423,13 +424,7 @@
               <div class="card-body">
                 <p class="text-secondary"><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" class="pe-auto">Human Benchmark Page</a></p>
                 Geography and History-
-                https://games.oec.world/en/tradle/
-                https://worldle.teuteuf.fr/
-                https://travle.earth/
-                https://histordle.com/yeardle/
-                https://histordle.com/popcultured/
-                https://www.chronophoto.app/game.html
-                https://timeguessr.com/roundonedaily
+
                 
                 Words-
                 https://www.nytimes.com/crosswords
