--- a/daily-games.html
+++ b/daily-games.html
@@ -364,12 +364,12 @@
               <div id="tab-top-1" class="card tab-pane active show">
                 <div class="card-body">
                   <div class="card-title">Geography & History</div>
-                  <p class="text-secondary">Worldle<a href="https://worldle.teuteuf.fr/" class="pe-auto">https://worldle.teuteuf.fr/</a></p>
-                  <p class="text-secondary">Travle<a href="https://travle.earth/" class="pe-auto">https://travle.earth/</a></p>
-                  <p class="text-secondary">Histordle | Yeardle<a href="https://histordle.com/yeardle/" class="pe-auto">https://histordle.com/yeardle/</a></p>
-                  <p class="text-secondary">Histordle | Popcultured<a href="https://histordle.com/popcultured/" class="pe-auto">https://histordle.com/popcultured/</a></p>
-                  <p class="text-secondary">Chronophoto<a href="https://www.chronophoto.app/game.html" class="pe-auto">https://www.chronophoto.app/game.html</a></p>
-                  <p class="text-secondary">Timeguessr<a href="https://timeguessr.com/roundonedaily" class="pe-auto">https://timeguessr.com/roundonedaily</a></p>
+                  <p>Worldle<a href="https://worldle.teuteuf.fr/" class="pe-auto">https://worldle.teuteuf.fr/</a></p>
+                  <p>Travle<a href="https://travle.earth/" class="pe-auto">https://travle.earth/</a></p>
+                  <p>Histordle | Yeardle<a href="https://histordle.com/yeardle/" class="pe-auto">https://histordle.com/yeardle/</a></p>
+                  <p>Histordle | Popcultured<a href="https://histordle.com/popcultured/" class="pe-auto">https://histordle.com/popcultured/</a></p>
+                  <p>Chronophoto<a href="https://www.chronophoto.app/game.html" class="pe-auto">https://www.chronophoto.app/game.html</a></p>
+                  <p>Timeguessr<a href="https://timeguessr.com/roundonedaily" class="pe-auto">https://timeguessr.com/roundonedaily</a></p>
                 </div>
               </div>
               <!-- Content of card #2 -->
