--- a/daily-games.html
+++ b/daily-games.html
@@ -382,21 +382,21 @@
               <div id="tab-top-2" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
-                  https://www.nytimes.com/crosswords
+                  <p>NYT Crosswords <a href="https://www.nytimes.com/crosswords/" class="pe-auto">https://www.nytimes.com/crosswords/</a></p>
                   <p>NYT Crossword Mini<a href="https://www.nytimes.com/crosswords/game/mini" class="pe-auto">https://www.nytimes.com/crosswords/game/mini</a></p>
-                  <p>Semantle<a href="https://semantle.com/" class="pe-auto">https://semantle.com/</a></p>
-                  <p>Sedecordle<a href="https://www.sedecordle.com/" class="pe-auto">https://www.sedecordle.com/</a></p>
-                  <p>Antiwordle<a href="https://www.antiwordle.com/" class="pe-auto">https://www.antiwordle.com/</a></p>
-                  <p>Quordle<a href="https://www.merriam-webster.com/games/quordle/#/" class="pe-auto">https://www.merriam-webster.com/games/quordle/#/</a></p>
-                  <p>Squareword<a href="https://squareword.org/" class="pe-auto">https://squareword.org/</a></p>
-                  <p>Wafflegame<a href="https://wafflegame.net/daily" class="pe-auto">https://wafflegame.net/daily</a></p>
-                  <p>Murdle<a href="https://murdle.vercel.app/" class="pe-auto">https://murdle.vercel.app/</a></p>
-                  <p>Spellie<a href="https://spelliegame.com/" class="pe-auto">https://spelliegame.com/</a></p>
-                  <p>Stackle<a href="https://www.stackle.fun/" class="pe-auto">https://www.stackle.fun/</a></p>
-                  <p>Phrasle<a href="https://phrasle.com/" class="pe-auto">https://phrasle.com/</a></p>
-                  <p>Contexto<a href="https://contexto.me/" class="pe-auto">https://contexto.me/</a></p>
-                  <p>Spellcheck<a href="https://spellcheck.xyz/" class="pe-auto">https://spellcheck.xyz/</a></p>
-                  <p>Boggdle/<a href="https://simenmh.com/boggdle/" class="pe-auto">https://simenmh.com/boggdle/</a></p>
+                  <p>Semantle <a href="https://semantle.com/" class="pe-auto">https://semantle.com/</a></p>
+                  <p>Sedecordle <a href="https://www.sedecordle.com/" class="pe-auto">https://www.sedecordle.com/</a></p>
+                  <p>Antiwordle <a href="https://www.antiwordle.com/" class="pe-auto">https://www.antiwordle.com/</a></p>
+                  <p>Quordle <a href="https://www.merriam-webster.com/games/quordle/#/" class="pe-auto">https://www.merriam-webster.com/games/quordle/#/</a></p>
+                  <p>Squareword <a href="https://squareword.org/" class="pe-auto">https://squareword.org/</a></p>
+                  <p>Waffle Game <a href="https://wafflegame.net/daily" class="pe-auto">https://wafflegame.net/daily</a></p>
+                  <p>Murdle <a href="https://murdle.vercel.app/" class="pe-auto">https://murdle.vercel.app/</a></p>
+                  <p>Spellie <a href="https://spelliegame.com/" class="pe-auto">https://spelliegame.com/</a></p>
+                  <p>Stackle <a href="https://www.stackle.fun/" class="pe-auto">https://www.stackle.fun/</a></p>
+                  <p>Phrasle <a href="https://phrasle.com/" class="pe-auto">https://phrasle.com/</a></p>
+                  <p>Contexto <a href="https://contexto.me/" class="pe-auto">https://contexto.me/</a></p>
+                  <p>Spell Check <a href="https://spellcheck.xyz/" class="pe-auto">https://spellcheck.xyz/</a></p>
+                  <p>Boggdle <a href="https://simenmh.com/boggdle/" class="pe-auto">https://simenmh.com/boggdle/</a></p>
                 </div>
               </div>
               <!-- Content of card #3 -->
@@ -404,7 +404,7 @@
                 <div class="card-body">
                   <div class="card-title"></div>
                   <p>Hurdle <a href="https://hurdle.iancanderson.com/" class="pe-auto">https://hurdle.iancanderson.com/</a></p>
-                  <p>Colorle<a href="https://kev1nccw.github.io/colorle/" class="pe-auto">https://kev1nccw.github.io/colorle/</a></p>
+                  <p>Colorle <a href="https://kev1nccw.github.io/colorle/" class="pe-auto">https://kev1nccw.github.io/colorle/</a></p>
                   <p>Numberle <a href="https://dduarte.github.io/numberle/" class="pe-auto">https://dduarte.github.io/numberle/</a></p>
                   <p>Primel <a href="https://converged.yt/primel/" class="pe-auto">https://converged.yt/primel/</a></p>
                   <p>Thirtle <a href="https://doodle-pile.gitlab.io/thirtle/" class="pe-auto">https://doodle-pile.gitlab.io/thirtle/</a></p>
