--- a/daily-games.html
+++ b/daily-games.html
@@ -340,6 +340,7 @@
     <div class="page-wrapper">
       <div class="page-body">
         <div class="container-xl">
+          The 'dles
           <div class="row row-deck row-cards">
 
             <!-- Cards with tabs component -->
@@ -383,7 +384,7 @@
                 <div class="card-body">
                   <div class="card-title"></div>
                   <p>NYT Crosswords <a href="https://www.nytimes.com/crosswords/" class="pe-auto">https://www.nytimes.com/crosswords/</a></p>
-                  <p>NYT Crossword Mini<a href="https://www.nytimes.com/crosswords/game/mini" class="pe-auto">https://www.nytimes.com/crosswords/game/mini</a></p>
+                  <p>NYT Crossword Mini <a href="https://www.nytimes.com/crosswords/game/mini" class="pe-auto">https://www.nytimes.com/crosswords/game/mini</a></p>
                   <p>Semantle <a href="https://semantle.com/" class="pe-auto">https://semantle.com/</a></p>
                   <p>Sedecordle <a href="https://www.sedecordle.com/" class="pe-auto">https://www.sedecordle.com/</a></p>
                   <p>Antiwordle <a href="https://www.antiwordle.com/" class="pe-auto">https://www.antiwordle.com/</a></p>
@@ -416,6 +417,7 @@
               <div id="tab-top-4" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
+                  <p>Framed <a href="https://www.framed.wtf/" class="pe-auto">https://www.cinenerdle2.app/</a></p>
                   <p>Cine 2 Nerdle <a href="https://www.cinenerdle2.app/" class="pe-auto">https://www.cinenerdle2.app/</a></p>
                   <p>Rotten Tomatoes Movie Trivia <a href="https://www.rottentomatoes.com/movie-trivia/" class="pe-auto">https://www.rottentomatoes.com/movie-trivia/</a></p>
                   <p>Movie to Movie <a href="https://movietomovie.com/" class="pe-auto">https://movietomovie.com/</a></p>
