--- a/daily-games.html
+++ b/daily-games.html
@@ -442,7 +442,7 @@
               <div id="tab-top-6" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
-                    <p>Daily Dozen Trivia <a href="ttps://dailydozentrivia.com/" class="pe-auto">https://dailydozentrivia.com/</a></p>
+                    <p>Daily Dozen Trivia <a href="https://dailydozentrivia.com/" class="pe-auto">https://dailydozentrivia.com/</a></p>
                     <p>Rogule <a href="https://rogule.com/" class="pe-auto">https://rogule.com/</a></p>
                     <p>Murdle <a href="https://murdle.com/" class="pe-auto">https://murdle.com/</a></p>
                     <p>Costcodle <a href="https://costcodle.com/" class="pe-auto">https://costcodle.com/</a></p>
