--- a/links.html
+++ b/links.html
@@ -347,7 +347,7 @@
                 <h3 class="card-title">My Links</h3>
               </div>
               <div class="card-body">
-                <p class="text-secondary"><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" class="pe-auto">Human Benchmark Page</a></p>
+                <p class="text-secondary"><a href="https://humanbenchmark.com/users/67ed6625fb31d80008e08707" target="_blank" class="pe-auto">Human Benchmark Page</a></p>
               </div>
             </div>
   
