--- a/links.html
+++ b/links.html
@@ -356,11 +356,11 @@
                 <h3 class="card-title">Music</h3>
               </div>
               <div class="card-body">
-                <p class="text-secondary"><a href="https://open.spotify.com/user/jewle30y7mtfcll7eilheq6fl?si=cebbd20d71194b77" class="pe-auto">Spotify</a></p>
-                <p class="text-secondary"><a href="https://www.discogs.com/user/structurallyunsound/collection?header=1" class="pe-auto">Discogs</a></p>
+                <p class="text-secondary"><a href="https://open.spotify.com/user/jewle30y7mtfcll7eilheq6fl?si=cebbd20d71194b77" target="_blank" class="pe-auto">Spotify</a></p>
+                <p class="text-secondary"><a href="https://www.discogs.com/user/structurallyunsound/collection?header=1" target="_blank" class="pe-auto">Discogs</a></p>
                 
-                <p class="text-secondary"><a href="https://stats.fm/paulstephenrudd" class="pe-auto">stats.fm</a></p>
-                <p class="text-secondary"><a href="https://www.last.fm/user/anticoagulation" class="pe-auto">last.fm</a></p>
+                <p class="text-secondary"><a href="https://stats.fm/paulstephenrudd" target="_blank"class="pe-auto">stats.fm</a></p>
+                <p class="text-secondary"><a href="https://www.last.fm/user/anticoagulation" target="_blank"class="pe-auto">last.fm</a></p>
               </div>
             </div>
             
@@ -369,8 +369,8 @@
                 <h3 class="card-title">My Links</h3>
               </div>
               <div class="card-body">
-                <p class="text-secondary"><a href="https://boxd.it/6NFHD" class="pe-auto">Letterboxd</a></p>
-                <p class="text-secondary"><a href="https://www.goodreads.com/user/show/140799212-no" class="pe-auto">Goodreads</a></p>                
+                <p class="text-secondary"><a href="https://boxd.it/6NFHD" target="_blank" class="pe-auto">Letterboxd</a></p>
+                <p class="text-secondary"><a href="https://www.goodreads.com/user/show/140799212-no" target="_blank" class="pe-auto">Goodreads</a></p>                
               </div>
             </div>
           </div>
