--- a/daily-games.html
+++ b/daily-games.html
@@ -371,45 +371,45 @@
               <div id="tab-top-1" class="card tab-pane active show">
                 <div class="card-body">
                   <div class="card-title"></div>
-                  <p>Worldle <a href="https://worldle.teuteuf.fr/" class="pe-auto">https://worldle.teuteuf.fr/</a></p>
-                  <p>Travle <a href="https://travle.earth/" class="pe-auto">https://travle.earth/</a></p>
-                  <p>Histordle | Yeardle <a href="https://histordle.com/yeardle/" class="pe-auto">https://histordle.com/yeardle/</a></p>
-                  <p>Histordle | Popcultured <a href="https://histordle.com/popcultured/" class="pe-auto">https://histordle.com/popcultured/</a></p>
-                  <p>Chronophoto <a href="https://www.chronophoto.app/game.html" class="pe-auto">https://www.chronophoto.app/game.html</a></p>
-                  <p>Timeguessr <a href="https://timeguessr.com/roundonedaily" class="pe-auto">https://timeguessr.com/roundonedaily</a></p> 
+                  <p>Worldle <a href="https://worldle.teuteuf.fr/" target="_blank" class="pe-auto">https://worldle.teuteuf.fr/</a></p>
+                  <p>Travle <a href="https://travle.earth/" target="_blank" class="pe-auto">https://travle.earth/</a></p>
+                  <p>Histordle | Yeardle <a href="https://histordle.com/yeardle/" target="_blank" class="pe-auto">https://histordle.com/yeardle/</a></p>
+                  <p>Histordle | Popcultured <a href="https://histordle.com/popcultured/" target="_blank" class="pe-auto">https://histordle.com/popcultured/</a></p>
+                  <p>Chronophoto <a href="https://www.chronophoto.app/game.html" target="_blank" class="pe-auto">https://www.chronophoto.app/game.html</a></p>
+                  <p>Timeguessr <a href="https://timeguessr.com/roundonedaily" target="_blank" class="pe-auto">https://timeguessr.com/roundonedaily</a></p> 
                 </div>
               </div>
               <!-- Content of card #2 -->
               <div id="tab-top-2" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
-                  <p>NYT Crosswords <a href="https://www.nytimes.com/crosswords/" class="pe-auto">https://www.nytimes.com/crosswords/</a></p>
-                  <p>NYT Crossword Mini <a href="https://www.nytimes.com/crosswords/game/mini" class="pe-auto">https://www.nytimes.com/crosswords/game/mini</a></p>
-                  <p>Semantle <a href="https://semantle.com/" class="pe-auto">https://semantle.com/</a></p>
-                  <p>Sedecordle <a href="https://www.sedecordle.com/" class="pe-auto">https://www.sedecordle.com/</a></p>
-                  <p>Antiwordle <a href="https://www.antiwordle.com/" class="pe-auto">https://www.antiwordle.com/</a></p>
-                  <p>Quordle <a href="https://www.merriam-webster.com/games/quordle/#/" class="pe-auto">https://www.merriam-webster.com/games/quordle/#/</a></p>
-                  <p>Squareword <a href="https://squareword.org/" class="pe-auto">https://squareword.org/</a></p>
-                  <p>Waffle Game <a href="https://wafflegame.net/daily" class="pe-auto">https://wafflegame.net/daily</a></p>
-                  <p>Murdle <a href="https://murdle.vercel.app/" class="pe-auto">https://murdle.vercel.app/</a></p>
-                  <p>Spellie <a href="https://spelliegame.com/" class="pe-auto">https://spelliegame.com/</a></p>
-                  <p>Stackle <a href="https://www.stackle.fun/" class="pe-auto">https://www.stackle.fun/</a></p>
-                  <p>Phrasle <a href="https://phrasle.com/" class="pe-auto">https://phrasle.com/</a></p>
-                  <p>Contexto <a href="https://contexto.me/" class="pe-auto">https://contexto.me/</a></p>
-                  <p>Spell Check <a href="https://spellcheck.xyz/" class="pe-auto">https://spellcheck.xyz/</a></p>
-                  <p>Boggdle <a href="https://simenmh.com/boggdle/" class="pe-auto">https://simenmh.com/boggdle/</a></p>
+                  <p>NYT Crosswords <a href="https://www.nytimes.com/crosswords/" target="_blank" class="pe-auto">https://www.nytimes.com/crosswords/</a></p>
+                  <p>NYT Crossword Mini <a href="https://www.nytimes.com/crosswords/game/mini" target="_blank" class="pe-auto">https://www.nytimes.com/crosswords/game/mini</a></p>
+                  <p>Semantle <a href="https://semantle.com/" target="_blank" class="pe-auto">https://semantle.com/</a></p>
+                  <p>Sedecordle <a href="https://www.sedecordle.com/" target="_blank" class="pe-auto">https://www.sedecordle.com/</a></p>
+                  <p>Antiwordle <a href="https://www.antiwordle.com/" target="_blank" class="pe-auto">https://www.antiwordle.com/</a></p>
+                  <p>Quordle <a href="https://www.merriam-webster.com/games/quordle/#/" target="_blank" class="pe-auto">https://www.merriam-webster.com/games/quordle/#/</a></p>
+                  <p>Squareword <a href="https://squareword.org/" target="_blank" class="pe-auto">https://squareword.org/</a></p>
+                  <p>Waffle Game <a href="https://wafflegame.net/daily" target="_blank" class="pe-auto">https://wafflegame.net/daily</a></p>
+                  <p>Murdle <a href="https://murdle.vercel.app/" target="_blank" class="pe-auto">https://murdle.vercel.app/</a></p>
+                  <p>Spellie <a href="https://spelliegame.com/" target="_blank" class="pe-auto">https://spelliegame.com/</a></p>
+                  <p>Stackle <a href="https://www.stackle.fun/" target="_blank" class="pe-auto">https://www.stackle.fun/</a></p>
+                  <p>Phrasle <a href="https://phrasle.com/" target="_blank" class="pe-auto">https://phrasle.com/</a></p>
+                  <p>Contexto <a href="https://contexto.me/" target="_blank" class="pe-auto">https://contexto.me/</a></p>
+                  <p>Spell Check <a href="https://spellcheck.xyz/" target="_blank" class="pe-auto">https://spellcheck.xyz/</a></p>
+                  <p>Boggdle <a href="https://simenmh.com/boggdle/" target="_blank" class="pe-auto">https://simenmh.com/boggdle/</a></p>
                 </div>
               </div>
               <!-- Content of card #3 -->
               <div id="tab-top-3" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
-                  <p>Hurdle <a href="https://hurdle.iancanderson.com/" class="pe-auto">https://hurdle.iancanderson.com/</a></p>
-                  <p>Colorle <a href="https://kev1nccw.github.io/colorle/" class="pe-auto">https://kev1nccw.github.io/colorle/</a></p>
-                  <p>Numberle <a href="https://dduarte.github.io/numberle/" class="pe-auto">https://dduarte.github.io/numberle/</a></p>
-                  <p>Primel <a href="https://converged.yt/primel/" class="pe-auto">https://converged.yt/primel/</a></p>
-                  <p>Thirtle <a href="https://doodle-pile.gitlab.io/thirtle/" class="pe-auto">https://doodle-pile.gitlab.io/thirtle/</a></p>
-                  <p>Nerdle <a href="https://nerdlegame.com/" class="pe-auto">https://nerdlegame.com/</a></p>
+                  <p>Hurdle <a href="https://hurdle.iancanderson.com/" target="_blank" class="pe-auto">https://hurdle.iancanderson.com/</a></p>
+                  <p>Colorle <a href="https://kev1nccw.github.io/colorle/" target="_blank" class="pe-auto">https://kev1nccw.github.io/colorle/</a></p>
+                  <p>Numberle <a href="https://dduarte.github.io/numberle/" target="_blank" class="pe-auto">https://dduarte.github.io/numberle/</a></p>
+                  <p>Primel <a href="https://converged.yt/primel/" target="_blank" class="pe-auto">https://converged.yt/primel/</a></p>
+                  <p>Thirtle <a href="https://doodle-pile.gitlab.io/thirtle/" target="_blank" class="pe-auto">https://doodle-pile.gitlab.io/thirtle/</a></p>
+                  <p>Nerdle <a href="https://nerdlegame.com/" target="_blank" class="pe-auto">https://nerdlegame.com/</a></p>
                 </div>
               </div>
               
@@ -417,11 +417,11 @@
               <div id="tab-top-4" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
-                  <p>Framed <a href="https://www.framed.wtf/" class="pe-auto">https://www.cinenerdle2.app/</a></p>
-                  <p>Cine 2 Nerdle <a href="https://www.cinenerdle2.app/" class="pe-auto">https://www.cinenerdle2.app/</a></p>
-                  <p>Rotten Tomatoes Movie Trivia <a href="https://www.rottentomatoes.com/movie-trivia/" class="pe-auto">https://www.rottentomatoes.com/movie-trivia/</a></p>
-                  <p>Movie to Movie <a href="https://movietomovie.com/" class="pe-auto">https://movietomovie.com/</a></p>
-                  <p>Box Office Game <a href="https://boxofficega.me/" class="pe-auto">https://boxofficega.me/</a></p>
+                  <p>Framed <a href="https://www.framed.wtf/" target="_blank" class="pe-auto">https://www.cinenerdle2.app/</a></p>
+                  <p>Cine 2 Nerdle <a href="https://www.cinenerdle2.app/" target="_blank" class="pe-auto">https://www.cinenerdle2.app/</a></p>
+                  <p>Rotten Tomatoes Movie Trivia <a href="https://www.rottentomatoes.com/movie-trivia/" target="_blank" class="pe-auto">https://www.rottentomatoes.com/movie-trivia/</a></p>
+                  <p>Movie to Movie <a href="https://movietomovie.com/" target="_blank" class="pe-auto">https://movietomovie.com/</a></p>
+                  <p>Box Office Game <a href="https://boxofficega.me/" target="_blank" class="pe-auto">https://boxofficega.me/</a></p>
                   </div>
                 </div>
 
@@ -429,12 +429,12 @@
               <div id="tab-top-5" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
-                    <p>Gamedle <a href="https://www.gamedle.wtf/?lang=en#" class="pe-auto">https://www.gamedle.wtf/?lang=en#</a></p>
-                    <p>Pokedoku <a href="https://pokedoku.com/" class="pe-auto">https://pokedoku.com/</a></p>
-                    <p>Guess the Game <a href="https://guessthe.game/" class="pe-auto">https://guessthe.game/</a></p>
-                    <p>Squirdle <a href="https://squirdle.fireblend.com/daily.html" class="pe-auto">https://squirdle.fireblend.com/daily.html</a></p>
-                    <p>Mario Heardle <a href="https://mario-heardle.glitch.me/" class="pe-auto">https://mario-heardle.glitch.me/</a></p>
-                    <p>Zelda Heardle <a href="https://zelda-heardle.glitch.me/" class="pe-auto">https://zelda-heardle.glitch.me/</a></p>
+                    <p>Gamedle <a href="https://www.gamedle.wtf/?lang=en#" target="_blank" class="pe-auto">https://www.gamedle.wtf/?lang=en#</a></p>
+                    <p>Pokedoku <a href="https://pokedoku.com/" target="_blank" class="pe-auto">https://pokedoku.com/</a></p>
+                    <p>Guess the Game <a href="https://guessthe.game/" target="_blank" class="pe-auto">https://guessthe.game/</a></p>
+                    <p>Squirdle <a href="https://squirdle.fireblend.com/daily.html" target="_blank" class="pe-auto">https://squirdle.fireblend.com/daily.html</a></p>
+                    <p>Mario Heardle <a href="https://mario-heardle.glitch.me/" target="_blank" class="pe-auto">https://mario-heardle.glitch.me/</a></p>
+                    <p>Zelda Heardle <a href="https://zelda-heardle.glitch.me/" target="_blank" class="pe-auto">https://zelda-heardle.glitch.me/</a></p>
                   </div>
                 </div>
 
@@ -442,14 +442,14 @@
               <div id="tab-top-6" class="card tab-pane">
                 <div class="card-body">
                   <div class="card-title"></div>
-                    <p>Daily Dozen Trivia <a href="https://dailydozentrivia.com/" class="pe-auto">https://dailydozentrivia.com/</a></p>
-                    <p>Rogule <a href="https://rogule.com/" class="pe-auto">https://rogule.com/</a></p>
-                    <p>Murdle <a href="https://murdle.com/" class="pe-auto">https://murdle.com/</a></p>
-                    <p>Costcodle <a href="https://costcodle.com/" class="pe-auto">https://costcodle.com/</a></p>
-                    <p>Bandle <a href="https://bandle.app/" class="pe-auto">https://bandle.app/</a></p>
-                    <p>Foodguessr <a href="https://www.foodguessr.com/daily" class="pe-auto">https://www.foodguessr.com/daily</a></p>
-                    <p>Guess the Audio <a href="https://guesstheaudio.com/" class="pe-auto">https://guesstheaudio.com/</a></p>
-                    <p>Guess the Book <a href="https://guessthebook.app/" class="pe-auto">https://guessthebook.app/</a></p>
+                    <p>Daily Dozen Trivia <a href="https://dailydozentrivia.com/" target="_blank" class="pe-auto">https://dailydozentrivia.com/</a></p>
+                    <p>Rogule <a href="https://rogule.com/" target="_blank" class="pe-auto">https://rogule.com/</a></p>
+                    <p>Murdle <a href="https://murdle.com/" target="_blank" class="pe-auto">https://murdle.com/</a></p>
+                    <p>Costcodle <a href="https://costcodle.com/" target="_blank" class="pe-auto">https://costcodle.com/</a></p>
+                    <p>Bandle <a href="https://bandle.app/" target="_blank" class="pe-auto">https://bandle.app/</a></p>
+                    <p>Foodguessr <a href="https://www.foodguessr.com/daily" target="_blank" class="pe-auto">https://www.foodguessr.com/daily</a></p>
+                    <p>Guess the Audio <a href="https://guesstheaudio.com/" target="_blank" class="pe-auto">https://guesstheaudio.com/</a></p>
+                    <p>Guess the Book <a href="https://guessthebook.app/" target="_blank" class="pe-auto">https://guessthebook.app/</a></p>
                   </div>
                 </div>
               </div>
